MAPD-704 - Prevent mobile property attributes from wrapping if the data is too long

--- a/frontend/map/styles/views/results-mobile.styl
+++ b/frontend/map/styles/views/results-mobile.styl
@@ -109,6 +109,7 @@ $card-gutter = 8px
     ul.attr
       padding 0
       color: $rm_attribute_lighter
+      white-space: nowrap;
 
       li
         list-style none
